Revert "Merged from develop branch and removed incomplete modules: CA, Choreographer, DeviceReg, SystemReg"
This reverts commit 09c604ae4b8fbb53c33747921cfa7b8bd9ecf432.